feat(template): added npm libs (bootstrap etc...)

--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -1,4 +1,4 @@
-{% extends 'common/base.html' %}
+{% extends 'extends/base.html' %}
 {% block content %}
 <p>This is <strong>app1</strong> page</p>
 {% endblock %}
