--- a/app2/templates/app2/index.html
+++ b/app2/templates/app2/index.html
@@ -1,4 +1,4 @@
-{% extends 'common/base.html' %}
+{% extends 'extends/base.html' %}
 {% block content %}
 <p>This is <strong>app2</strong> page</p>
 {% endblock %}
