--- a/templates/extends/base.html
+++ b/templates/extends/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ app_name }}</title>
   {% if settings.DEBUG %}
     <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.css' %}">
@@ -11,13 +12,32 @@
   {% endif %}
 </head>
 <body>
-  {% block content %}
-  {% endblock %}
 
-  <ul>
-    <li><a href="{% url 'app1' %}">app1 page</a></li>
-    <li><a href="{% url 'app2' %}">app2 page</a></li>
-  </ul>
+  <div class="container">
+    <div class="header clearfix">
+      <nav>
+        <ul class="nav nav-pills pull-right">
+          <li role="presentation"><a href="/">home (app1)</a></li>
+          <li role="presentation"><a href="{% url 'app1' %}">app1</a></li>
+          <li role="presentation"><a href="{% url 'app2' %}">app2</a></li>
+        </ul>
+      </nav>
+      <h3 class="text-muted">Django Front-end Integration</h3>
+    </div>
+
+    <div class="jumbotron">
+      <h1>{{ app_name|upper }}</h1>
+
+      {% block content %}
+      {% endblock %}
+    </div>
+
+
+    <footer class="footer">
+      <p class="text-center">&copy; 2016 <a href="https://twitter.com/Tkashiro">@Tkashiro</a>.</p>
+    </footer>
+
+  </div>
   {% if settings.DEBUG %}
     <script src="{% static 'jquery/dist/jquery.js' %}"></script>
     <script src="{% static 'bootstrap/dist/js/bootstrap.js' %}"></script>
