--- a/templates/extends/base.html
+++ b/templates/extends/base.html
@@ -45,5 +45,10 @@
     <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
     <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
   {% endif %}
+
+
+  <script src="{% static 'common/scripts/app.js' %}"></script>
+  {% block scripts %}
+  {% endblock %}
 </body>
 </html>
